# game-of-life-cpp

./: .gitignore  flake.nix  meson.build
src/: grid.cpp  main.cpp
src/include/: globals.hpp  grid.hpp
